# spectral-cube

./: .casa_setup.py  .coveragerc  .download_packages.sh  .gitignore  .import_astropy.py  .install_astropy.py  .install_pip.py  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  casa_config_template.py  pip-requirements  pyproject.toml  setup.cfg  setup.py  spectral_cube.py  spectral_cube_io.py  test_spectral_cube.py  tox.ini  wcs_manipulation.py
.github/: dependabot.yml
.github/workflows/: ci-crontests.yml  main.yml  publish.yml
.travis/: setup.sh
.travis/casa-data/geodetic/Observatories/: table.f0  table.f1  table.info
benchmarks/: spectral_smooth_bench.py  spectral_smooth_results.md
docs/: Makefile  accessing.rst  api.rst  arithmetic.rst  beam_handling.rst  big_data.rst  conf.py  continuum_subtraction.rst  creating_reading.rst  dask.rst  developing_with_spectralcube.rst  errors.rst  examples.rst  index.rst  installing.rst  manipulating.rst  masking.rst  metadata.rst  moments.rst  nitpick-exceptions  quick_looks.rst  reprojection.rst  rtd-pip-requirements  smoothing.rst  spectral.rst  spectral_extraction.rst  stokes.rst  subsets.rst  visualization.rst  writing.rst  yt_example.rst
docs/_static/: spectralcube.css
docs/_templates/: layout.html
spectral_cube/: __init__.py  _astropy_init.py  _moments.py  analysis_utilities.py  base_class.py  conftest.py  cube_utils.py  dask_spectral_cube.py  lower_dimensional_structures.py  masks.py  np_compat.py  spectral_axis.py  spectral_cube.py  stokes_spectral_cube.py  test_spectral_cube.py  utils.py  visualization-tools.py  wcs_manipulation.py  wcs_utils.py  yt_wrappers.py  ytcube.py
spectral_cube/io/: _casa_chunking.c  casa_dask.py  casa_dminfo.py  casa_image.py  casa_low_level_io.py  casa_masks.py  casa_wcs.py  class_lmv.py  core.py  fits.py  test_homebrew_casa_reader.py
spectral_cube/io/tests/: test_casa_dask.py  test_casa_dminfo.py  test_casa_low_level_io.py  test_casa_wcs.py
spectral_cube/io/tests/data/gt32bit.image/: table.f0
spectral_cube/io/tests/data/lt32bit.image/: table.f0
spectral_cube/tests/: __init__.py  helpers.py  setup_package.py  test_analysis_functions.py  test_casafuncs.py  test_cube_utils.py  test_dask.py  test_io.py  test_masks.py  test_moments.py  test_parallel_methods.py  test_performance.py  test_projection.py  test_regrid.py  test_spectral_axis.py  test_spectral_cube.py  test_stokes.py  test_stokes_spectral_cube.py  test_subcubes.py  test_visualization.py  test_wcs_utils.py  utilities.py  yt_vr1.npz  yt_vr2.npz
spectral_cube/tests/data/: 255-fk5.reg  255-pixel.reg  cubewcs1.hdr  cubewcs2.hdr  example_cube.fits  example_cube.lmv  fk5.reg  fk5_twoboxes.reg  greisen2006.hdr  header_jybeam.hdr  image.reg  make_test_cubes.py  no_overlap_fk5.reg  no_overlap_image.reg  partial_overlap_fk5.reg  partial_overlap_image.reg  yt_vr1.npz  yt_vr2.npz
spectral_cube/tests/data/basic.image/: table.f0_TSM0
spectral_cube/tests/data/basic.image/logtable/: table.f0
spectral_cube/tests/data/basic.image/mask0/: table.f0
spectral_cube/tests/data/basic_bigendian.image/: table.f0  table.f0_TSM0
spectral_cube/tests/data/basic_bigendian.image/mask0/: table.f0_TSM0
spectral_cube/tests/data/example_cube.image/: table.f0  table.f0_TSM0
spectral_cube/tests/data/example_cube.image/logtable/: table.f0
spectral_cube/tests/data/example_cube.image/mask0/: table.f0  table.f0_TSM0
spectral_cube/tests/data/nomask.image/: table.f0
spectral_cube/tests/test_data/: make_test_cubes.py
test_data/: Makefile  make_test_cubes.py
