[metadata]
name = spectral-cube
description = A package for interaction with spectral cubes
long_description = file: README.rst
author = Adam Ginsburg, Tom Robitaille,  Chris Beaumont, Adam Leroy, Erik Rosolowsky, and Eric Koch
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://spectral-cube.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/spectral-cube

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    radio_beam
    six
    dask[array]
    joblib
    casa-formats-io

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy
novis =
    zarr
    fsspec
    pvextractor
    regions ; python_version<'3.8'
    reproject
    scipy
all =
    zarr
    fsspec
    aplpy
    glue-core[qt]
    matplotlib
    pvextractor
    regions ; python_version<'3.8'
    reproject
    scipy
    yt ; python_version<'3.8'

[options.package_data]
spectral_cube.tests =
       data/*
       data/*/*

spectral_cube.io.tests = data/*/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
doctest_subpackage_requires =
    spectral_cube/vis*.py = aplpy
