[metadata]
name = spectral-cube
description = A package for interaction with spectral cubes
long_description = file: README.rst
author = Adam Ginsburg, Tom Robitaille,  Chris Beaumont, Adam Leroy, Erik Rosolowsky, and Eric Koch
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://spectral-cube.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/spectral-cube
version = 0.6.3

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    radio_beam>=0.3.3
    dask[array]
    joblib
    casa-formats-io
    packaging
    tqdm

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    regions>=0.7
    numpy>=1.24.0
    astropy>=5.2.1
docs =
    sphinx-astropy
    matplotlib
noviz =
    zarr<3 # Unpin if updated. See issue #936
    fsspec
    distributed
    pvextractor
    reproject>=0.9.1
    scipy
viz =
    aplpy
    matplotlib
    reproject
    pvextractor
viz_extra =
    glue-core[qt]
    yt ; python_version<'3.8'
dev =
    pvextractor
    radio-beam
    reproject
    regions

[options.package_data]
spectral_cube.tests =
    data/*
    data/*/*

spectral_cube.io.tests = data/*/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
doctest_subpackage_requires =
    spectral_cube/vis*.py = aplpy


[coverage:run]
omit =
  spectral-cube/__init__*
  spectral-cube/conftest.py
  spectral-cube/*setup*
  spectral-cube/*/tests/*
  spectral-cube/tests/test_*
  spectral-cube/extern/*
  spectral-cube/utils/compat/*
  spectral-cube/version*
  spectral-cube/wcs/docstrings*
  spectral-cube/_erfa/*
  */spectral-cube/__init__*
  */spectral-cube/conftest.py
  */spectral-cube/*setup*
  */spectral-cube/*/tests/*
  */spectral-cube/tests/test_*
  */spectral-cube/extern/*
  */spectral-cube/utils/compat/*
  */spectral-cube/version*
  */spectral-cube/wcs/docstrings*
  */spectral-cube/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
